--- a/style.css
+++ b/style.css
@@ -1,54 +1,63 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+
+.matrix__img {
   width: 100%;
 }
-.aaa .more_inf {
+
+.matrix__info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
 
-  .aaa { 
+  .matrix { 
     text-align: center;
   }
 
 }
-.centered-main-page-element {
+
+.container {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+
+.text-field {
   display: flex;
 }
-ul {
+
+.task-list {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+
+.item {
   list-style: none;
 }
-input,button{
+
+.input, .btn{
   outline: none;
 }
-button {
+
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -57,12 +66,13 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+
+.btn:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
-h3,
-label[for="new-task"] {
+.block__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -71,7 +81,8 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+
+.text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -83,21 +94,23 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+
+.text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.block__title {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+
+.text-field__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -106,47 +119,52 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+
+.item__check, .item__label, .item__task, .item__edit-btn, .delete{
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.item__check {
   margin: 0 10px;
 }
-li > label {
+
+.item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >  input[type="text"] {
+
+.text {
   width: 226px;
 }
-button.delete img {
+
+.delete__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+
+.delete__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.item_completed .item__label{
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.item .text{
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.item_edit .text{
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.item_edit .item__label{
   display: none;
 }
